Remove java 17's Stream#toList call from production code